force-app/main/default/objects/Questionnaire_Dynamic_Logic__c/Questionnaire_Dynamic_Logic__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - Store question branching dynamic logic.</description>
    <label>Question Branching</label>
    <nameField>
        <displayFormat>DL-{0000}</displayFormat>
        <label>Dynamic Logic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Branching</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>