force-app/main/default/objects/Questionnaire_Dynamic_Logic__c/fields/Question_Group__c.field-meta.xml
<CustomField>
    <fullName>Question_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup with Question Group</description>
    <label>Question Group</label>
    <referenceTo>Question_Group__c</referenceTo>
    <relationshipName>Dynamic_Logic</relationshipName>
    <type>Lookup</type>
</CustomField>