force-app/main/default/objects/Questionnaire_Dynamic_Logic__c/fields/Question_Option__c.field-meta.xml
<CustomField>
    <fullName>Question_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup with Question Option</description>
    <label>Question Option</label>
    <referenceTo>Question_Option__c</referenceTo>
    <relationshipName>Dynamic_Logic</relationshipName>
    <type>Lookup</type>
</CustomField>