force-app/main/default/objects/Questionnaire_Dynamic_Logic__c/fields/Show_Question_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Show_Question_Questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup with Question Questionnaire</description>
    <label>Show Question Questionnaire</label>
    <referenceTo>Question_Questionnaire__c</referenceTo>
    <relationshipName>Dynamic_Logic1</relationshipName>
    <type>Lookup</type>
</CustomField>